force-app/main/default/objects/Trust_Line_Item__c/Trust_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Trust Line Item</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trust Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>