force-app/main/default/objects/Trust_Line_Item__c/fields/Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billable_Rate__c</fullName>
    <label>Billable Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>