force-app/main/default/objects/Trust_Line_Item__c/fields/Billing_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Billing_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trust_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>