force-app/main/default/objects/Trust_Line_Item__c/fields/Hours_Billed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Billed__c</fullName>
    <label>Hours Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>