force-app/main/default/objects/Trust_Line_Item__c/fields/Processing_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Date_Time__c</fullName>
    <label>Processing Date/Time</label>
    <type>DateTime</type>
</CustomField>