force-app/main/default/objects/Trust_Line_Item__c/validationRules/Trust_Account_Cannot_be_below_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Trust_Account_Cannot_be_below_0</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c +  Trust__r.Total_Amount_In_Escrow__c &lt; 0</errorConditionFormula>
    <errorMessage>Trust account funds cannot be lower than zero</errorMessage>
</ValidationRule>